# syndantic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst  introduction.rst  requirements.txt  user_guide.rst
src/syndantic/: __init__.py  annotations.py  error.py  token.py
src/syndantic/tokenizer/: __init__.py  regex.py
tests/: conftest.py  test_dummy.py
