[build-system]
requires = ["setuptools~=80.9", "setuptools_scm~=8.3"]
build-backend = "setuptools.build_meta"

[project]
name = "syndantic"
license = {file = "LICENSE"}
description = "AST-Driven Parsing"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]
dynamic = ["version", "readme"]
dependencies = [
    "pydantic~=2.11",
    "regex"
]
requires-python = ">=3.11"

[[project.authors]]
name = "tom65536"
email = "peregrinus@planet.ms"

[project.urls]
Home = "https://github.com/tom65536/syndantic"
Source = "https://github.com/tom65536/syndantic"
Documentation = "https://syndantic.readthedocs.io/latest/"
Pypi = "https://pypi.org/project/syndantic/"
Issues = "https://github.com/tom65536/syndantic/issues"
Changelog = "https://github.com/tom65536/syndantic/blob/main/CHANGELOG.md"

[project.optional-dependencies]
build = [
    "build ~= 1.2"
]

[tool.setuptools.dynamic.version]
attr="syndantic.__about__.__version__"

[tool.setuptools.dynamic.readme]
file = ["README.md"]
content-type = "text/markdown"

[tool.isort]
line_length=79
multi_line_output=3
profile="black"

[tool.mypy]
warn_unused_configs = true
packages = "syndantic"
plugins = ["pydantic.mypy"]

[tool.bandit]
tests = ["B101", "B102", "B110", "B112"]

[tool.vulture]
paths = ["src/syndantic", "tests"]

[tool.black]
skip-string-normalization = true
line-length=79

[tool.semantic_release]
version_variables = [
    "src/syndantic/__about__.py:__version__",
    "docs/source/conf.py:release"
]
build_command = """
    python -m pip install -e .[build]
    python -m build .
"""

[tool.pydoclint]
style = 'google'

[tool.setuptools_scm]
version_file = "src/syndantic/__about__.py"
local_scheme = "no-local-version"
